profiles and links added

--- a/html/about.html
+++ b/html/about.html
@@ -404,9 +404,9 @@
         <h4>Zhilei Zheng</h4>
         <h5>Technology Director</h5>
         <div class="links">
-          <a><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
-          <i class="icofont icofont-social-facebook"></i>&nbsp;
-          <i class="icofont icofont-link-alt"></i>
+          <a href=""><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href=""><i class="icofont icofont-social-facebook"></i></a>&nbsp;
+          <a href=""><i class="icofont icofont-link-alt"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -441,18 +441,21 @@
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Stephany_Li.jpg">
-        <h4>Stephanie Li</h4>
+        <h4>Yuzhou Stephany Li</h4>
         <h5>Administration Chair</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Alex_Chen.jpeg">
-        <h4>Alex Chen</h4>
+        <h4>Alexander Yuang Chen</h4>
         <h5>Business Development Chair</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Menglu_Zhang.jpg">
         <h4>Menglu Zhang</h4>
         <h5>Finance Chair</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/menglu-zhang-199999112/"><i class="icofont icofont-social-linkedin"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Lynn_Zhao.jpg">
@@ -483,16 +486,26 @@
         <img class="img-fluid" src="../assets/images/David_Chen.jpg">
         <h4>David Chen</h4>
         <h5>Member</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/davidchenpenn/"><i class="icofont icofont-social-linkedin"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Rachel Wu</h4>
         <h5>Member</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/rachelyueqiwu/"><i class="icofont icofont-social-linkedin"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Jipeng_Liu.jpg">
-        <h4>Jipeng Liu</h4>
+        <h4>Jipeng Tony Liu</h4>
         <h5>Member</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/jipeng-liu-85b5419b"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="https://www.facebook.com/profile.php?id=100009588560522"><i class="icofont icofont-social-facebook"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
@@ -511,13 +524,20 @@
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Echo_Zeng.jpg">
-        <h4>Zhongyuan Zeng</h4>
+        <h4>Echo Zeng</h4>
         <h5>Member</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/echo-zeng-8848258b"><i class="icofont icofont-social-linkedin"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Samuel_Kang.jpg">
         <h4>Samuel Kang</h4>
         <h5>Member</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/kangsamuel/"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="https://www.facebook.com/kang.samuel"><i class="icofont icofont-social-facebook"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
@@ -526,13 +546,19 @@
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Yilin_Ma.jpg">
-        <h4>Yilin Ma</h4>
+        <h4>Yilin Elina Ma</h4>
         <h5>Member</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/yilin-elina-ma-29a5a1138/"><i class="icofont icofont-social-linkedin"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Kitty_Chen.jpg">
-        <h4>Shiqi Chen</h4>
+        <h4>Kitty Chen</h4>
         <h5>Member</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/chen-kitty-154925134"><i class="icofont icofont-social-linkedin"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Marianne_Xiong.jpg">
@@ -586,12 +612,11 @@
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Sai_Ma.jpg">
-        <h4>Sai Ma</h4>
+        <h4>Sai William Ma</h4>
         <h5>Member</h5>
         <div class="links">
-          <i class="icofont icofont-social-linkedin"></i>&nbsp;
-          <i class="icofont icofont-social-facebook"></i>&nbsp;
-          <i class="icofont icofont-link-alt"></i>
+          <a href="https://www.linkedin.com/in/sai-ma-2909a813a"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="https://www.facebook.com/saima1998"><i class="icofont icofont-social-facebook"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -613,16 +638,26 @@
         <img class="img-fluid" src="../assets/images/Mindy_Ma.jpg">
         <h4>Mindy Ma</h4>
         <h5>Member</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/mindy-ma-5058ba150/"><i class="icofont icofont-social-linkedin"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Lula_Chou.jpg">
         <h4>Lula Chou</h4>
         <h5>Member</h5>
+        <div class="links">
+          <a href="https://m.facebook.com/fia.waters"><i class="icofont icofont-social-facebook"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Michelle_Cai.jpg">
         <h4>Michelle Cai</h4>
         <h5>Member</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/michelle-cai-a87400149/"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="https://www.facebook.com/Michelle.Cai04"><i class="icofont icofont-social-linkedin"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
@@ -643,11 +678,17 @@
         <img class="img-fluid" src="../assets/images/Yi_Yang.jpg">
         <h4>Yi Yang</h4>
         <h5>Vice Chair</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/yi-yang-378a989b/"><i class="icofont icofont-social-linkedin"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Ying_Chen.jpg">
         <h4>Ying Chen</h4>
         <h5>Vice Chair</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/ying-chen-959202126/"><i class="icofont icofont-social-linkedin"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
@@ -666,22 +707,32 @@
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Yixi Wang</h4>
+        <h4>Cecilia Wang</h4>
         <h5>Member</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/yixi-wang-272087158/"><i class="icofont icofont-social-linkedin"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Lei_Wang.jpg">
         <h4>Lei Wang</h4>
         <h5>Member</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/lei-wang-084a64158/"><i class="icofont icofont-social-linkedin"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Yijie Zhao</h4>
+        <h4>Lisa Yijie Zhao</h4>
         <h5>Member</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/lisa-zhao-48093b146/"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="https://www.facebook.com/lisa.zhao.1485"><i class="icofont icofont-social-facebook"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Gaorui_Liu.jpg">
-        <h4>Gaorui Liu</h4>
+        <h4>Ray Liu</h4>
         <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -706,8 +757,11 @@
     <div class="row">
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Xiaoya_Song.jpg">
-        <h4>Sabrina Song</h4>
+        <h4>Xiaoya Song</h4>
         <h5>Vice Chair</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/xiaoya-sabrina-song-b0919b127/"><i class="icofont icofont-social-linkedin"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
@@ -718,26 +772,44 @@
         <img class="img-fluid" src="../assets/images/Chelsie_Xu.jpg">
         <h4>Chelsie Xu</h4>
         <h5>Member</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/chelsie-xu-532951149/"><i class="icofont icofont-social-linkedin"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Lucy Sun</h4>
+        <h4>Shangting Sun</h4>
         <h5>Member</h5>
+        <div class="links">
+          <a href="https://www.facebook.com/lucy.sun.16"><i class="icofont icofont-social-facebook"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Claire_Yu.jpg">
         <h4>Claire Yu</h4>
         <h5>Member</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/claire-yu-b4799b155/"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="https://www.facebook.com/yu.r.claire"><i class="icofont icofont-social-facebook"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Yiting_Hua.jpg">
         <h4>Ellen Hua</h4>
         <h5>Member</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/ellen-yiting-hua-2901b8133/"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="https://www.facebook.com/yiting.hua.7"><i class="icofont icofont-social-facebook"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Cynthia Li</h4>
         <h5>Member</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/yun-cynthia-li-74b305149/"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="https://www.facebook.com/cynthia.li.5817"><i class="icofont icofont-social-facebook"></i></a>
+        </div>
       </div>
     </div>
   </div>
@@ -766,8 +838,12 @@
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Carol_Zhou.jpeg">
-        <h4>Jinkang Zhou</h4>
+        <h4>Carol Zhou</h4>
         <h5>Member</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/%E9%9D%B3%E5%BA%B7-%E5%91%A8-b14263119/"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="https://m.facebook.com/karol.zhou.9?ref=wizard"><i class="icofont icofont-social-facebook"></i></a>
+        </div>
       </div>
     </div>
   </div>
