--- a/temp.html
+++ b/temp.html
@@ -406,7 +406,7 @@
         <div class="links">
           <a href=""><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
           <a href=""><i class="icofont icofont-social-facebook"></i></a>&nbsp;
-          <a href=""><i class="icofont icofont-link-alt"></i>
+          <a href=""><i class="icofont icofont-link-alt"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -547,7 +547,7 @@
         <h4>Shiqi Chen</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/chen-kitty-154925134"><i class="icofont icofont-social-linkedin">
+          <a href="https://www.linkedin.com/in/chen-kitty-154925134"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -736,17 +736,17 @@
         <img class="img-fluid" src="../assets/images/Chelsie_Xu.jpg">
         <h4>Chelsie Xu</h4>
         <h5>Member</h5>
-        <!-- <div class="links">
+        <div class="links">
           <a href="https://www.linkedin.com/in/chelsie-xu-532951149/"><i class="icofont icofont-social-linkedin"></i></a>
-        </div> -->
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Shangting Sun</h4>
         <h5>Member</h5>
-        <!-- <div class="links">
+        <div class="links">
           <a href="https://www.facebook.com/lucy.sun.16"><i class="icofont icofont-social-linkedin"></i></a>
-        </div> -->
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Claire_Yu.jpg">
