--- a/html/home.html
+++ b/html/home.html
@@ -52,7 +52,7 @@
         </a>
       </div> -->
       <div class="col-6 right-txt no-padding">
-        <a href="./home-ch.html">
+        <a href="/home-ch">
           <div class="option" id="lang">
             <i class="icofont icofont-globe"></i><br/>
             <span class="hover-text">中文</span>
@@ -84,7 +84,7 @@
           <div class="col-5 right-txt">
             <div class="right-txt" style="float:right;">
               <div class="nav-custom-item right-txt">
-                <a href="./home-ch.html">
+                <a href="/home-ch">
                   <i class="icofont icofont-globe"></i>
                    简体中文
                 </a>
@@ -126,44 +126,44 @@
       <div class="vertical-center mobile-hide">
         <div class="row center-txt">
           <div class="col-12">
-            <a href="#"><div class="navigation-action-btn">Register</div></a>
+            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs/"><div class="navigation-action-btn">Register</div></a>
           </div>
         </div>
         <div class="row">
           <div class="col-12 col-md-12 row menu-items">
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-0"> <a href="/html/home.html" class="active-item">Home</a> <i class="icofont icofont-dotted-left"></i> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="/html/about.html">About</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="/html/panels.html">Panels</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/html/panels.html">Speakers</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/html/agenda.html">Agenda</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/html/past.html">Past</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-0"> <a href="/home" class="active-item">Home</a> <i class="icofont icofont-dotted-left"></i> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="/about">About</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="/panels">Panels</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/panels">Speakers</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/agenda">Agenda</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/past">Past</a> </div>
           </div>
         </div>
         <div class="row center-txt">
           <div class="col-4 offset-2 col-md-2 offset-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="https://www.facebook.com/whartonPWCS">
                 <i class="icofont icofont-social-facebook"></i>
               </a>
             </div>
           </div>
           <div class="col-4 col-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="../assets/images/wechat-code.jpeg">
                 <i class="icofont icofont-social-wechat"></i>
               </a>
             </div>
           </div>
           <div class="col-4 offset-2 col-md-2 offset-md-0 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="https://weibo.com/whartonchinasummit">
                 <i class="icofont icofont-social-weibo"></i>
               </a>
             </div>
           </div>
           <div class="col-4 col-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="mailto:official@whartonsummit.org">
                 <i class="icofont icofont-email"></i>
               </a>
             </div>
@@ -178,13 +178,13 @@
         </div>
         <div class="row">
           <div class="col-12 col-md-12 row menu-items center-txt">
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-0"> <a href="/html/home.html" class="active-item">Home</a> <i class="icofont icofont-dotted-left"></i> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="/html/about.html">About</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="/html/panels.html">Panels</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/html/panels.html">Speakers</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/html/agenda.html">Agenda</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/html/past.html">Past</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="/html/past.html">Register</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-0"> <a href="/home.html" class="active-item">Home</a> <i class="icofont icofont-dotted-left"></i> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="/about.html">About</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="/panels.html">Panels</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/panels.html">Speakers</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/agenda.html">Agenda</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/past.html">Past</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="/past.html">Register</a> </div>
           </div>
         </div>
         <div class="row hide" id="m-close-nav">
@@ -217,7 +217,7 @@
         <div class="row">
           <div class="col-10 white-txt crimson-bg ls-1" style="letter-spacing: 3px;">REGISTER</div>
           <div class="col-2 white-bg action-area">
-            <a href="#section-temp" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
+            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs/" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
           </div>
         </div>
       </div>
@@ -264,8 +264,7 @@
             <span class="mobile-ultra">PWCS 2018 Theme:</span>
             <div class="theme">Our Generation</div>
           </strong><br/><br/>
-          <p class="mobile-hide">The World to China: Challenges in Supply-Side Reform.<br/>
-          China to the World: Integration in Globalisation Strategy.</p>
+          <p class="mobile-hide">Redefine China's Future</p>
         </div>
         <img class="section-1-city-img" src="../assets/images/shanghai.jpeg">
       </div>
@@ -428,7 +427,7 @@
   </div>
 
   <div class="section-action" id="speakers-section-action">
-      <a href="./speakers.html">
+      <a href="/panels">
         <div class="section-action-btn">
           More About Speakers <i class="icofont icofont-simple-right"></i>
         </div>
@@ -567,7 +566,7 @@
     </div>
 
     <div class="section-action" id="panels-section-action">
-        <a href="./panels.html">
+        <a href="/panels">
           <div class="section-action-btn">
             More About Panels <i class="icofont icofont-simple-right"></i>
           </div>
@@ -660,7 +659,7 @@
     </div>
 
     <div class="section-action" id="more-section-action">
-      <a href="./agenda.html">
+      <a href="/agenda">
       <div class="section-action-btn">
         See Agenda <i class="icofont icofont-simple-right"></i>
       </div>
@@ -676,7 +675,7 @@
           <div class="row height-80 height-70-mobile">
             <div class="col-3 center-txt">
               <div class="vertical-center contact-icon">
-                <a href="https://www.facebook.com">
+                <a href="https://www.facebook.com/whartonPWCS">
                 <i class="icofont icofont-social-facebook"></i><br/>
                 <span class="txt-4-icon">Facebook</span>
                 </a>
@@ -692,7 +691,7 @@
             </div>
             <div class="col-3 center-txt">
               <div class="vertical-center contact-icon">
-                <a href="https://www.weibo.com">
+                <a href="https://weibo.com/whartonchinasummit">
                 <i class="icofont icofont-social-weibo"></i><br/>
                 <span class="txt-4-icon"><span class="mobile-hide">Sina</span> Weibo</span>
                 </a>
@@ -700,7 +699,7 @@
             </div>
             <div class="col-3 center-txt">
               <div class="vertical-center contact-icon">
-                <a href="https://www.weibo.com">
+                <a href="mailto:official@whartonsummit.org">
                 <i class="icofont icofont-ui-email"></i><br/>
                 <span class="txt-4-icon">Email<span class="mobile-hide"> Us</span></span>
                 </a>
