fix for agenda and home and past

--- a/html/past.html
+++ b/html/past.html
@@ -51,7 +51,7 @@
         </a>
       </div> -->
       <div class="col-6 right-txt no-padding">
-        <a href="./home-ch.html">
+        <a href="/past-ch">
           <div class="option" id="lang">
             <i class="icofont icofont-globe"></i><br/>
             <span class="hover-text">中文</span>
@@ -83,7 +83,7 @@
           <div class="col-5 right-txt">
             <div class="right-txt" style="float:right;">
               <div class="nav-custom-item right-txt">
-                <a href="./home-ch.html">
+                <a href="/past-ch">
                   <i class="icofont icofont-globe"></i>
                    简体中文
                 </a>
@@ -93,8 +93,10 @@
                 MENU
               </div>
               <div class="nav-custom-item right-txt register-item">
-                REGISTER
-                <i class="icofont icofont-dotted-right"></i>
+                <a href="https://whartonchinasummit.ticketleap.com/2018pwcs">
+                  REGISTER
+                  <i class="icofont icofont-dotted-right"></i>
+                </a>
               </div>
             </div>
           </div>
@@ -103,8 +105,10 @@
       <div class="container mobile-only">
         <div class="row height-100">
           <div class="col-5 register-item">
-            REGISTER
-            <i class="icofont icofont-dotted-right"></i>
+            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs">
+              REGISTER
+              <i class="icofont icofont-dotted-right"></i>
+            </a>
           </div>
           <div class="col-3 no-padding right-txt">
             <i class="icofont icofont-globe"></i>
@@ -125,44 +129,44 @@
       <div class="vertical-center mobile-hide">
         <div class="row center-txt">
           <div class="col-12">
-            <a href="#"><div class="navigation-action-btn">Register</div></a>
+            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs"><div class="navigation-action-btn">Register</div></a>
           </div>
         </div>
         <div class="row">
           <div class="col-12 col-md-12 row menu-items">
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-0"> <a href="./home.html">Home</a></div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="./about.html">About</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="./panels.html">Panels</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="./panels.html">Speakers</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="./agenda.html">Agenda</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-5"> <a class="active-item" href="./past.html">Past</a> <i class="icofont icofont-dotted-left"></i> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-0"> <a href="/home">Home</a></div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="/about">About</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="/panels">Panels</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/panels">Speakers</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/agenda">Agenda</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-5"> <a class="active-item" href="/past">Past</a> <i class="icofont icofont-dotted-left"></i> </div>
           </div>
         </div>
         <div class="row center-txt">
           <div class="col-4 offset-2 col-md-2 offset-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="https://www.facebook.com/whartonPWCS">
                 <i class="icofont icofont-social-facebook"></i>
               </a>
             </div>
           </div>
           <div class="col-4 col-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="../assets/images/wechat-code.jpeg">
                 <i class="icofont icofont-social-wechat"></i>
               </a>
             </div>
           </div>
           <div class="col-4 offset-2 col-md-2 offset-md-0 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="https://weibo.com/whartonchinasummit">
                 <i class="icofont icofont-social-weibo"></i>
               </a>
             </div>
           </div>
           <div class="col-4 col-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="mailto:official@whartonsummit.org">
                 <i class="icofont icofont-email"></i>
               </a>
             </div>
@@ -177,13 +181,13 @@
         </div>
         <div class="row">
           <div class="col-12 col-md-12 row menu-items center-txt">
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-0"> <a href="./home.html">Home</a></div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="./about.html">About</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="./panels.html">Panels</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="./panels.html">Speakers</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="./agenda.html">Agenda</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-5"> <a class="active-item" href="./past.html">Past</a> <i class="icofont icofont-dotted-left"></i> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="./past.html">Register</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-0"> <a href="/home">Home</a></div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="/about">About</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="/panels">Panels</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/panels">Speakers</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/agenda">Agenda</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-5"> <a class="active-item" href="/past">Past</a> <i class="icofont icofont-dotted-left"></i> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="https://whartonchinasummit.ticketleap.com/2018pwcs">Register</a> </div>
           </div>
         </div>
         <div class="row hide" id="m-close-nav">
@@ -218,13 +222,13 @@
         To Build the Bridge Between Us
       </div>
       <div class="page-caption black-shadow">
-         PAST <br/> SUMMITS
+         <h1 class="page-caption">PAST <br/> SUMMITS</h1>
       </div>
       <div class="bottom-square">
         <div class="row">
           <div class="col-10 white-txt crimson-bg ls-1" style="letter-spacing: 3px;">REGISTER</div>
           <div class="col-2 white-bg action-area">
-            <a href="#section-temp" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
+            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
           </div>
         </div>
       </div>
@@ -239,10 +243,10 @@
     <div class="white-bg" id="whitebox">
       <div class="row row-eq-height">
         <div class="col-lg-5 col-sm-12 col-xs-12">
-          <h1 class="year-title">2017</h1>
-          <h1 class="slogan-title">
+          <h2 class="year-title">2017</h2>
+          <h2 class="slogan-title">
             <span>the World to China: </span>Challenges in Supply Side Reform<br>
-            <span>China to the World: </span>Integration in Globalization Strategy</h1>
+            <span>China to the World: </span>Integration in Globalization Strategy</h2>
         </div>
         <div class="col-lg-7 col-sm-12 hidden-xs year-desc">
           <p>The 2017 Summit aimed to build the
@@ -268,7 +272,7 @@
       </div>
       <div class="row">
         <div class="col-lg-12 col-sm-12 col-xs-12">
-          <h1 id="whycome">PAST SPEAKERS</h1>
+          <h2 id="whycome">PAST SPEAKERS</h2>
         </div>
       </div>
     </div>
@@ -407,9 +411,9 @@
     <div class="white-bg" id="whitebox" style="padding-bottom: 5%;">
       <div class="row row-eq-height">
         <div class="col-lg-5 col-sm-12 col-xs-12">
-          <h1 class="year-title">2016</h1>
-          <h1 class="slogan-title">
-            <span>China's New Normal: </span><br/>The Next Engine of Growth<br>
+          <h2 class="year-title">2016</h2>
+          <h2 class="slogan-title">
+            <span>China's New Normal: </span><br/>The Next Engine of Growth<br></h2>
         </div>
         <div class="col-lg-7 col-sm-12 hidden-xs year-desc">
           <p>After decades of high-speed growth, China's economy is running out of steam. Traditional drivers including export, infrastructure investment and real estate are losing their momentum. In response, the Chinese Central Bank has slashed interest rates, but the effect is limited by the not-quite-liberalized nature of China’s financial system. The Government is additionally wary of fiscal stimulus because local government debt has grown to dangerous levels. In other words, the old period of high speed growth is over, and China's economy is entering a ‘New Normal’. </p>
