--- a/html/agenda.html
+++ b/html/agenda.html
@@ -52,7 +52,7 @@
         </a>
       </div> -->
       <div class="col-6 right-txt no-padding">
-        <a href="./home-ch.html">
+        <a href="/agenda-ch">
           <div class="option" id="lang">
             <i class="icofont icofont-globe"></i><br/>
             <span class="hover-text">中文</span>
@@ -84,7 +84,7 @@
           <div class="col-5 right-txt">
             <div class="right-txt" style="float:right;">
               <div class="nav-custom-item right-txt">
-                <a href="./home-ch.html">
+                <a href="/agenda-ch">
                   <i class="icofont icofont-globe"></i>
                    简体中文
                 </a>
@@ -94,8 +94,10 @@
                 MENU
               </div>
               <div class="nav-custom-item right-txt register-item">
-                REGISTER
-                <i class="icofont icofont-dotted-right"></i>
+                <a href="https://whartonchinasummit.ticketleap.com/2018pwcs">
+                  REGISTER
+                  <i class="icofont icofont-dotted-right"></i>
+                </a>
               </div>
             </div>
           </div>
@@ -104,8 +106,10 @@
       <div class="container mobile-only">
         <div class="row height-100">
           <div class="col-5 register-item">
-            REGISTER
-            <i class="icofont icofont-dotted-right"></i>
+            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs">
+              REGISTER
+              <i class="icofont icofont-dotted-right"></i>
+            </a>
           </div>
           <div class="col-3 no-padding right-txt">
             <i class="icofont icofont-globe"></i>
@@ -126,44 +130,44 @@
       <div class="vertical-center mobile-hide">
         <div class="row center-txt">
           <div class="col-12">
-            <a href="#"><div class="navigation-action-btn">Register</div></a>
+            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs"><div class="navigation-action-btn">Register</div></a>
           </div>
         </div>
         <div class="row">
           <div class="col-12 col-md-12 row menu-items">
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-0"> <a href="./home.html">Home</a></div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="./about.html">About</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="./panels.html">Panels</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="./panels.html">Speakers</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-5"> <a class="active-item" href="./agenda.html">Agenda</a> <i class="icofont icofont-dotted-left"></i> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="./past.html">Past</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-0"> <a href="/home">Home</a></div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="/about">About</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="/panels">Panels</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/panels">Speakers</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-5"> <a class="active-item" href="/agenda">Agenda</a> <i class="icofont icofont-dotted-left"></i> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/past">Past</a> </div>
           </div>
         </div>
         <div class="row center-txt">
           <div class="col-4 offset-2 col-md-2 offset-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="https://www.facebook.com/whartonPWCS">
                 <i class="icofont icofont-social-facebook"></i>
               </a>
             </div>
           </div>
           <div class="col-4 col-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="../assets/images/wechat-code.jpeg">
                 <i class="icofont icofont-social-wechat"></i>
               </a>
             </div>
           </div>
           <div class="col-4 offset-2 col-md-2 offset-md-0 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="https://weibo.com/whartonchinasummit">
                 <i class="icofont icofont-social-weibo"></i>
               </a>
             </div>
           </div>
           <div class="col-4 col-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="mailto:official@whartonsummit.org">
                 <i class="icofont icofont-email"></i>
               </a>
             </div>
@@ -217,14 +221,14 @@
       <div class="vertical-sub-title mobile-only">
         To Build the Bridge Between Us
       </div>
-      <div class="page-caption black-shadow">
-         2018 <br/> AGENDA
+      <div class="black-shadow">
+         <h1 class="page-caption">2018 <br/> AGENDA</h1>
       </div>
       <div class="bottom-square">
         <div class="row">
           <div class="col-10 white-txt crimson-bg ls-1" style="letter-spacing: 3px;">REGISTER</div>
           <div class="col-2 white-bg action-area">
-            <a href="#section-temp" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
+            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
           </div>
         </div>
       </div>
